# windy_guidance_test_bed

./: CMakeLists.txt  README.md  main_simulate_npfg.py  main_simulate_npfg_line.py  main_simulate_npfg_loiter.py  main_simulate_wagl.py  stability_bad_airspeed.py  stability_bad_airspeed_loit.py  stability_bad_wind_est.py
include/: helpers.h  npfg.h  path_type.h
pychecks/: test_line_path_bindings.py  test_loiter_path_bindings.py
pysrc/: plotting.py  simulation_env.py
src/: cpp_python_interface.cpp  helpers.cpp  npfg.cpp  path_type.cpp
test/: test_path_type.cpp
